--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -82,6 +82,18 @@
 			<artifactId>javase</artifactId>
 			<version>3.5.1</version>
 		</dependency>
+		
+		<!-- Apache POI for Excel Processing -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.5</version>
+		</dependency>
 
 	</dependencies>
 
